<resources>
    <string name="app_name">Судный день</string>
    <string name="txt_otp_verification">На этот номер будет отправлен код подтверждения</string>
    <string name="txt_will_send_otp">На этот номер будет отправлен код подтверждения</string>
    <string name="txt_enter_otp">Введите пароль, отправленный на</string>
    <string name="txt_enter_mob_no">Введите мобильный номер</string>
    <string name="txt_get_otp">Получить СМС-код</string>
    <string name="txt_dont_receive">Повторить отправку</string>
    <string name="txt_welcome">Добро пожаловать!</string>
    <string name="txt_search_here">Search here</string>
    <string name="txt_select_coun">Выбрать страну</string>
    <string name="err_no_net">Нет соединения с интернетом</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_verify">Проверить</string>
    <string name="txt_resend">Отправить</string>
    <string name="txt_name">Имя</string>
    <string name="txt_pic_name_desc">Это имя пользователя и изображение будут видны вашим пользователям Letschat. Другие пользователи смогут найти вас с помощью поиска.</string>
    <string name="txt_options">Опции</string>
    <string name="take_photo">Выбрать фото</string>
    <string name="txt_gallery">Открыть галерею</string>
    <string name="txt_file_p_error">Permission Denied. Please enable permission !</string>
    <string name="txt_profile">Профиль</string>
    <string name="txt_search">Поиск</string>
    <string name="txt_my_busines">Мои дела</string>
    <string name="txt_group">Группы</string>
    <string name="txt_services">Услуги</string>
    <string name="txt_chats">Чаты</string>
    <string name="txt_main">Главная</string>
    <string name="txt_letschat_contact">Letschat Contacts</string>
    <string name="txt_refresh">Обновить</string>
    <string name="txt_contacts">Контакты</string>
    <string name="txt_select_a_contact">Выбрать контакт</string>
    <string name="txt_invite_friends">Пригласить друзей</string>
    <string name="txt_add_contact">Добавить контакт</string>
    <string name="txt_logout">Выйти</string>
    <string name="txt_login_again">Please,login again to verify your number</string>
    <string name="txt_logged_in_head">This number is logged in another device!</string>
    <string name="default_notification_channel_id">default</string>
    <string name="introductory_text">Судный день</string>
    <string name="txt_notifications">Уведомления</string>
    <string name="txt_not_description">Включить уведомление</string>
    <string name="txt_message">Сообщение</string>
    <string name="txt_user_name">Имя пользователя</string>
    <string name="txt_u_name">Имя пользователя</string>
    <string name="txt_add_contacts">Добавить контакты</string>
    <string name="txt_add_group_mems">Добавить участников группы</string>
    <string name="txt_group_name">Введите название группы</string>
    <string name="txt_add_a_friend">Добавить в друзья</string>
    <string name="txt_select_a_option">Выберите вариант</string>
    <string name="txt_log_out">Выйти</string>
    <string name="txt_save_changes">Сохранить</string>
    <string name="txt_your_status">Статус</string>
    <string name="txt_mob_num">Мобильный номер</string>
    <string name="txt_want_2_logout">Вы хотите выйти из системы!</string>
    <string name="txt_alert_msg">Не беспокойтесь, когда вы снова войдете в систему, ваши сообщения будут восстановлены автоматически.</string>
    <string name="txt_cancel">Отмена</string>
    <string name="txt_ok">Ok</string>
    <string name="txt_take_video">Снять видео</string>
    <string name="title_onboarding_1">Начать.</string>
    <string name="title_onboarding_2">Инструкция на все случаи жизни.</string>
    <string name="title_onboarding_3">Вопросы юристу.</string>
    <string name="description_onboarding_1">Наше приложение поможет найти решение юридических вопросов любой степени сложности. Вам не нужно тратить время на поход к юристу, все ответы вы найдете в нашем приложени.</string>
    <string name="description_onboarding_2">Не знаете, как вернуть некачественный тьовар? Что писать в договоре аренды? Когда подавать декларацию? Выберите подходящую ситуацию, и мы подберем для вас решение!</string>
    <string name="description_onboarding_3">Если у вас есть вопрос, на который вы не смогли получить ответ в инструкциях, то задайте его нашему юристу напрямую в чате.</string>
    <string name="registration_text">Регистрация</string>
    <string name="registration_user_role">Пользователь</string>
    <string name="registration_email">Email</string>
    <string name="registration_passport_data">Паспортные данные*</string>
    <string name="registration_passport_data_ext">Также прикрепите сканы первого разворота и страницы с регистрацией</string>
    <string name="registration_diplom_data">Диплом о высшем образовании*</string>
    <string name="registration_diplom_data_ext">Также прикрепите сканы дипломов</string>
    <string name="registration_phone">Телефон</string>
    <string name="registration_phone_code">Код</string>
    <string name="registration_name">Имя</string>
    <string name="registration_ser_name">Фамилия</string>
    <string name="registration_last_name">Отчество</string>
    <string name="registration_password">Пароль</string>
    <string name="registration_repeat_password">Повторите пароль</string>
    <string name="registration_user_picture">Загрузить аватар</string>
    <string name="registration_button">Зарегистрироваться</string>
    <string name="enter_button">Войти</string>
    <string name="registration_enter_account">Войти в аккуаунт</string>
    <string name="registration_terms_of_use">Нажимая кнопку “Зарегистрироваться”, я принимаю условия Пользовательского соглашения и условия Политики конфиденциальности.</string>
    <string name="registration_choose_image">Загрузить аватар.</string>
    <string name="register_checkbox">Я принимаю условия Пользовательского соглашения и условия Политики конфиденциальности.</string>
    <string name="change_user_email_h1">Новая электронная почта</string>
    <string name="change_user_email_p1">На этот адрес будет отправлено письмо для подтверждения электронной почты</string>
    <string name="bottom_send">Отправить</string>
    <string name="text_recovery_password_bottom">Востановить пароль</string>
    <string name="text_change_password_title">Требования к паролю:</string>
    <string name="text_change_password_bottom">Изменить пароль</string>
    <string name="text_change_password_hint1">Введите старый пароль</string>
    <string name="text_change_password_hint2">Введите новый пароль</string>
    <string name="text_change_password_hint3">Повторите новый пароль</string>
    <string name="registration_phone_login">Номер телефона</string>
    <string name="button_next">Далее</string>
    <string name="button_next_verify">Продолжить</string>
    <string name="txt_auto1_title">ДТП (водитель или страховая компания отказываются возмещать причиненный автомобилю ущерб, вред здоровью, занижают сумму выплаты)</string>
    <string name="txt_auto2_title">Повреждение транспортного средства действиями третьих лиц (не в результате ДТП).</string>
    <string name="txt_auto3_title">Сразу после покупки автомобиля или в процессе эксплуатации выявились недостатки</string>
    <string name="txt_auto5_title">Недостаток обнаружен в течение 15 дней со дня передачи автомобиля покупателю</string>
    <string name="txt_auto6_title">Недостаток обнаружен по истечении 15 дней со дня передачи автомобиля покупателю и недостаток является существенным</string>
    <string name="txt_auto7_title">При покупке автомобиля навязали дополнительное оборудование (доп. услуги), страхование жизни и здоровья</string>
    <string name="txt_auto8_title">Отказывают в ремонте по гарантии или требуют оплатить стоимость запасных частей или работ либо срок ремонта превышает 45 дней.</string>
    <string name="txt_services_alternative_situation">Если имеются альтернативные способы разрешения ситуации, которые могут быть наиболее выгодны для вас (сокращение времени, увеличение получаемых денежных сумм), то наши специалисты сообщат вам об этом.</string>
    <string name="txt_situation_rules">Требования о взыскании морального вреда,\nрасходов на представителя или досудебную\nэкспертизу, штраф в пользу потребителя\nза неудовлетворение его требований\nв добровольном порядке, а также взыскание\nвсех возможных видов неустойки, будут \nзаявлены автоматически исходя\nиз конкретной ситуации и анализа\nпредставленных документов.</string>
    <string name="go_payment">Перейти к оплате</string>
    <string name="payment">Оплатить</string>
    <string name="txt_appliances_rules">Доставка тяжелых предметов (более 5 килограммов) или вещей больших размеров для их замены, возврата или устранения дефектов оплачивается продавцом или производителем. Если данное правило не исполняется, и покупатель сам привозит товар, торговец обязан возместить связанные с этим расходы.</string>
    <string name="txt_furniture1_title">Купленная мебель (диван, стол, стул и тд) не подошла по форме, габаритам, фасону, расцветке.</string>
    <string name="txt_furniture2_title">Купленная мебель (диван, стол, стул и тд) не подошла по форме, габаритам, фасону, расцветке.</string>
    <string name="txt_clothing1_title">Одежда/обувь не подошла по фасону, цвету или размеру (отказываются принимать товар надлежащего качества)</string>
    <string name="txt_clothing2_title">Обнаружены существенные недостатки товара (товар оказался некачественным, имеются порезы, торчат швы и ,т.д.)</string>
    <string name="txt_clothing3_title">Недостатки обнаружены по истечении срока возврата товара (в пределах гарантийного срока)</string>
    <string name="title_main_screen">Популярные услуги</string>
    <string name="all_services_main_screen">Все</string>
    <string name="txt_forum">Сообщения</string>
    <string name="chat_with_lawyer">Чат с юристом</string>
    <string name="txt_delete">Удалить</string>
    <string name="button_stage_add">Создать</string>
    <string name="title_stage">Заголовок</string>
    <string name="stage_description">Текст</string>
    <string name="label_1">По дате</string>
    <string name="label_2">Заявки</string>
    <string name="label_3">Консультации</string>
    <string name="label_4">По темам</string>
</resources>