<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:title="@string/txt_main"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_account_balance_24"
        />

    <item
        android:id="@+id/nav_services"
        android:title="@string/txt_services"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_dashboard_24"/>

    <item
        android:id="@+id/nav_my_business"
        android:title="@string/txt_my_busines"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_assignment_24"/>

    <item
        android:id="@+id/nav_profile"
        android:title="@string/txt_profile"
        android:enabled="true"
        android:icon="@drawable/ic_account_circle"/>
</menu>