<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/VView"
    android:padding="16dp">

    <RadioGroup
        android:id="@+id/radioBtn"
        android:checkedButton="@+id/radio_button_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        >
        <RadioButton
            style="@style/RadioText"
            android:id="@+id/radio_button_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/label_1"/>
        <RadioButton
            style="@style/RadioText"
            android:id="@+id/radio_button_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/label_2" />
        <RadioButton
            style="@style/RadioText"
            android:id="@+id/radio_button_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/label_3"/>
        <RadioButton
            style="@style/RadioText"
            android:id="@+id/radio_button_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/label_4"/>

    </RadioGroup>
</LinearLayout>