<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction,UnusedAttribute">
    <item
        android:id="@+id/action_forum"
        app:actionLayout="@layout/view_alerts_message"
        android:title="@string/txt_forum"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_notifications"
        app:actionLayout="@layout/view_alerts_notifications"
        android:title="@string/txt_notifications"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/txt_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always"
        />
</menu>