<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.lawyerapplication.fragments.myprofile.FMyProfileViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".presentation.fragments.PasswordChangeFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_old_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/til_old_password_twice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:endIconMode="password_toggle"
        android:layout_marginTop="30dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_change_password_hint1"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_old_password_twice"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@id/til_old_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_old_password_twice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_change_password_hint2"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_new_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_old_password_twice"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_change_password_hint3"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textChangePasswordTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        android:lineHeight="20dp"
        android:textFontWeight="400"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/til_new_password"
        android:text="@string/text_change_password_title" />

    <ListView
        android:id="@+id/textChangePasswordTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="14dp"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/color_gray"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textChangePasswordTitle"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/change_password_button"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="50dp"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:textStyle="normal"
        android:textAllCaps="false"
        android:background="@color/colorPrimaryLaweyr"
        android:text="@string/text_change_password_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>