<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="cardItem"
            type="com.example.lawyerapplication.db.data.BanksCardItem"
            />
    </data>

    <RelativeLayout style="@style/VView"
        android:padding="16dp">

        <TextView
            android:id="@+id/txt_title"
            style="@style/TxtSemiSmallStyle"
            android:text="Создать этап"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="16dp"
            android:textFontWeight="400"
            android:lineHeight="32dp"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/image_close"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:src="@drawable/close_stage"
            android:layout_marginBottom="22dp"
             />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_title"
            android:layout_below="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="16dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_stage"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_description"
            android:layout_below="@+id/til_title"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="16dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:hint="@string/stage_description"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/enter_button"
            android:layout_below="@+id/til_description"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="30dp"
            android:layout_width="match_parent"
            style="@style/BtnStyle"
            android:text="@string/button_stage_add"
            />
    </RelativeLayout>
</layout>