<?xml version="1.0" encoding="utf-8"?>
<layout>
     <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         >
          <TextView
              android:id="@+id/title_situation_h1"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="24dp"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintBottom_toTopOf="@+id/radioGroupSituation"
              style="@style/title"
              android:text="@string/txt_auto2_title"
              />
          <RadioGroup
              android:id="@+id/radioGroupSituation"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="30dp"
              app:layout_constraintBottom_toTopOf="@id/textSignInCheck3"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@id/title_situation_h1"
              android:lineHeight="20dp"
              android:textFontWeight="400"
              android:textSize="14sp">
               <RadioButton
                   android:id="@+id/radio_button_1"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:text="Подготовка заявления в полицию, а также представление и защита интересов потерпевшего в полиции (в случае если причинитель вреда неизвестен)"/>
               <RadioButton
                   android:id="@+id/radio_button_2"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:text="Взыскание ущерба с причинителя вреда в судебном порядке (в случае если причинитель вреда установлен)"/>
               <RadioButton
                   android:id="@+id/radio_button_3"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:text="Не знаю, что выбрать, подскажите с учетом прилагаемых документов"/>

          </RadioGroup>
          <TextView
              android:id="@+id/textSignInCheck3"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:textSize="12dp"
              android:lineHeight="16dp"
              android:textFontWeight="400"
              android:layout_marginTop="30dp"
              android:textColor="@color/color_gray"
              android:textAlignment="viewStart"
              app:layout_constraintBottom_toTopOf="@id/enter_button"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/radioGroupSituation"
              android:text="@string/txt_services_alternative_situation"/>

          <com.google.android.material.button.MaterialButton
              android:id="@+id/enter_button"
              android:layout_marginTop="40dp"
              android:layout_marginBottom="10dp"
              android:layout_width="0dp"
              style="@style/BtnStyle"
              android:textStyle="normal"
              android:text="@string/button_next"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@id/textSignInCheck3"
              />



     </androidx.constraintlayout.widget.ConstraintLayout>
</layout>